y.output
Terminais sem uso na gramática

    TK_MENOR_IGUAL
    TK_MAIOR_IGUAL
    TK_IGUAL_IGUAL
    TK_DIFERENTE
    TK_MENOR
    TK_MAIOR


Gramática

    0 $accept: S $end

    1 S: COMANDOS

    2 COMANDOS: COMANDO COMANDOS
    3         | COMANDO

    4 COMANDO: TK_ID '=' E ';'
    5        | TK_INT TK_ID ';'
    6        | TK_BOOL TK_ID ';'
    7        | TK_FLOAT TK_ID ';'
    8        | TK_CHAR TK_ID ';'
    9        | E

   10 E: E '-' T
   11  | E '<' T
   12  | E TK_AND T
   13  | E '>' T
   14  | E '+' T
   15  | TK_CAST_INT T
   16  | T

   17 T: T '*' F
   18  | T '/' F
   19  | F
   20  | '!' F

   21 F: TK_CARACTER
   22  | TK_BOOL_LIT
   23  | TK_NUM
   24  | TK_NUM_FLOAT
   25  | TK_ID
   26  | '(' E ')'


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '!' (33) 20
    '(' (40) 26
    ')' (41) 26
    '*' (42) 17
    '+' (43) 14
    '-' (45) 10
    '/' (47) 18
    ';' (59) 4 5 6 7 8
    '<' (60) 11
    '=' (61) 4
    '>' (62) 13
    error (256)
    TK_NUM (258) 23
    TK_ID (259) 4 5 6 7 8 25
    TK_INT (260) 5
    TK_NUM_FLOAT (261) 24
    TK_CHAR (262) 8
    TK_CARACTER (263) 21
    TK_BOOL (264) 6
    TK_BOOL_LIT (265) 22
    TK_MENOR_IGUAL (266)
    TK_MAIOR_IGUAL (267)
    TK_IGUAL_IGUAL (268)
    TK_DIFERENTE (269)
    TK_MENOR (270)
    TK_MAIOR (271)
    TK_AND (272) 12
    TK_FLOAT (273) 7
    TK_CAST_INT (274) 15


Não terminais com as regras onde eles aparecem

    $accept (31)
        à esquerda: 0
    S (32)
        à esquerda: 1
        à direita: 0
    COMANDOS (33)
        à esquerda: 2 3
        à direita: 1 2
    COMANDO (34)
        à esquerda: 4 5 6 7 8 9
        à direita: 2 3
    E (35)
        à esquerda: 10 11 12 13 14 15 16
        à direita: 4 9 10 11 12 13 14 26
    T (36)
        à esquerda: 17 18 19 20
        à direita: 10 11 12 13 14 15 16 17 18
    F (37)
        à esquerda: 21 22 23 24 25 26
        à direita: 17 18 19 20


Estado 0

    0 $accept: • S $end

    TK_NUM        deslocar, e ir ao estado 1
    TK_ID         deslocar, e ir ao estado 2
    TK_INT        deslocar, e ir ao estado 3
    TK_NUM_FLOAT  deslocar, e ir ao estado 4
    TK_CHAR       deslocar, e ir ao estado 5
    TK_CARACTER   deslocar, e ir ao estado 6
    TK_BOOL       deslocar, e ir ao estado 7
    TK_BOOL_LIT   deslocar, e ir ao estado 8
    TK_FLOAT      deslocar, e ir ao estado 9
    TK_CAST_INT   deslocar, e ir ao estado 10
    '!'           deslocar, e ir ao estado 11
    '('           deslocar, e ir ao estado 12

    S         ir ao estado 13
    COMANDOS  ir ao estado 14
    COMANDO   ir ao estado 15
    E         ir ao estado 16
    T         ir ao estado 17
    F         ir ao estado 18


Estado 1

   23 F: TK_NUM •

    $padrão  reduzir usando a regra 23 (F)


Estado 2

    4 COMANDO: TK_ID • '=' E ';'
   25 F: TK_ID •

    '='  deslocar, e ir ao estado 19

    $padrão  reduzir usando a regra 25 (F)


Estado 3

    5 COMANDO: TK_INT • TK_ID ';'

    TK_ID  deslocar, e ir ao estado 20


Estado 4

   24 F: TK_NUM_FLOAT •

    $padrão  reduzir usando a regra 24 (F)


Estado 5

    8 COMANDO: TK_CHAR • TK_ID ';'

    TK_ID  deslocar, e ir ao estado 21


Estado 6

   21 F: TK_CARACTER •

    $padrão  reduzir usando a regra 21 (F)


Estado 7

    6 COMANDO: TK_BOOL • TK_ID ';'

    TK_ID  deslocar, e ir ao estado 22


Estado 8

   22 F: TK_BOOL_LIT •

    $padrão  reduzir usando a regra 22 (F)


Estado 9

    7 COMANDO: TK_FLOAT • TK_ID ';'

    TK_ID  deslocar, e ir ao estado 23


Estado 10

   15 E: TK_CAST_INT • T

    TK_NUM        deslocar, e ir ao estado 1
    TK_ID         deslocar, e ir ao estado 24
    TK_NUM_FLOAT  deslocar, e ir ao estado 4
    TK_CARACTER   deslocar, e ir ao estado 6
    TK_BOOL_LIT   deslocar, e ir ao estado 8
    '!'           deslocar, e ir ao estado 11
    '('           deslocar, e ir ao estado 12

    T  ir ao estado 25
    F  ir ao estado 18


Estado 11

   20 T: '!' • F

    TK_NUM        deslocar, e ir ao estado 1
    TK_ID         deslocar, e ir ao estado 24
    TK_NUM_FLOAT  deslocar, e ir ao estado 4
    TK_CARACTER   deslocar, e ir ao estado 6
    TK_BOOL_LIT   deslocar, e ir ao estado 8
    '('           deslocar, e ir ao estado 12

    F  ir ao estado 26


Estado 12

   26 F: '(' • E ')'

    TK_NUM        deslocar, e ir ao estado 1
    TK_ID         deslocar, e ir ao estado 24
    TK_NUM_FLOAT  deslocar, e ir ao estado 4
    TK_CARACTER   deslocar, e ir ao estado 6
    TK_BOOL_LIT   deslocar, e ir ao estado 8
    TK_CAST_INT   deslocar, e ir ao estado 10
    '!'           deslocar, e ir ao estado 11
    '('           deslocar, e ir ao estado 12

    E  ir ao estado 27
    T  ir ao estado 17
    F  ir ao estado 18


Estado 13

    0 $accept: S • $end

    $end  deslocar, e ir ao estado 28


Estado 14

    1 S: COMANDOS •

    $padrão  reduzir usando a regra 1 (S)


Estado 15

    2 COMANDOS: COMANDO • COMANDOS
    3         | COMANDO •

    TK_NUM        deslocar, e ir ao estado 1
    TK_ID         deslocar, e ir ao estado 2
    TK_INT        deslocar, e ir ao estado 3
    TK_NUM_FLOAT  deslocar, e ir ao estado 4
    TK_CHAR       deslocar, e ir ao estado 5
    TK_CARACTER   deslocar, e ir ao estado 6
    TK_BOOL       deslocar, e ir ao estado 7
    TK_BOOL_LIT   deslocar, e ir ao estado 8
    TK_FLOAT      deslocar, e ir ao estado 9
    TK_CAST_INT   deslocar, e ir ao estado 10
    '!'           deslocar, e ir ao estado 11
    '('           deslocar, e ir ao estado 12

    $padrão  reduzir usando a regra 3 (COMANDOS)

    COMANDOS  ir ao estado 29
    COMANDO   ir ao estado 15
    E         ir ao estado 16
    T         ir ao estado 17
    F         ir ao estado 18


Estado 16

    9 COMANDO: E •
   10 E: E • '-' T
   11  | E • '<' T
   12  | E • TK_AND T
   13  | E • '>' T
   14  | E • '+' T

    TK_AND  deslocar, e ir ao estado 30
    '+'     deslocar, e ir ao estado 31
    '-'     deslocar, e ir ao estado 32
    '<'     deslocar, e ir ao estado 33
    '>'     deslocar, e ir ao estado 34

    $padrão  reduzir usando a regra 9 (COMANDO)


Estado 17

   16 E: T •
   17 T: T • '*' F
   18  | T • '/' F

    '*'  deslocar, e ir ao estado 35
    '/'  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 16 (E)


Estado 18

   19 T: F •

    $padrão  reduzir usando a regra 19 (T)


Estado 19

    4 COMANDO: TK_ID '=' • E ';'

    TK_NUM        deslocar, e ir ao estado 1
    TK_ID         deslocar, e ir ao estado 24
    TK_NUM_FLOAT  deslocar, e ir ao estado 4
    TK_CARACTER   deslocar, e ir ao estado 6
    TK_BOOL_LIT   deslocar, e ir ao estado 8
    TK_CAST_INT   deslocar, e ir ao estado 10
    '!'           deslocar, e ir ao estado 11
    '('           deslocar, e ir ao estado 12

    E  ir ao estado 37
    T  ir ao estado 17
    F  ir ao estado 18


Estado 20

    5 COMANDO: TK_INT TK_ID • ';'

    ';'  deslocar, e ir ao estado 38


Estado 21

    8 COMANDO: TK_CHAR TK_ID • ';'

    ';'  deslocar, e ir ao estado 39


Estado 22

    6 COMANDO: TK_BOOL TK_ID • ';'

    ';'  deslocar, e ir ao estado 40


Estado 23

    7 COMANDO: TK_FLOAT TK_ID • ';'

    ';'  deslocar, e ir ao estado 41


Estado 24

   25 F: TK_ID •

    $padrão  reduzir usando a regra 25 (F)


Estado 25

   15 E: TK_CAST_INT T •
   17 T: T • '*' F
   18  | T • '/' F

    '*'  deslocar, e ir ao estado 35
    '/'  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 15 (E)


Estado 26

   20 T: '!' F •

    $padrão  reduzir usando a regra 20 (T)


Estado 27

   10 E: E • '-' T
   11  | E • '<' T
   12  | E • TK_AND T
   13  | E • '>' T
   14  | E • '+' T
   26 F: '(' E • ')'

    TK_AND  deslocar, e ir ao estado 30
    '+'     deslocar, e ir ao estado 31
    '-'     deslocar, e ir ao estado 32
    '<'     deslocar, e ir ao estado 33
    '>'     deslocar, e ir ao estado 34
    ')'     deslocar, e ir ao estado 42


Estado 28

    0 $accept: S $end •

    $padrão  aceitar


Estado 29

    2 COMANDOS: COMANDO COMANDOS •

    $padrão  reduzir usando a regra 2 (COMANDOS)


Estado 30

   12 E: E TK_AND • T

    TK_NUM        deslocar, e ir ao estado 1
    TK_ID         deslocar, e ir ao estado 24
    TK_NUM_FLOAT  deslocar, e ir ao estado 4
    TK_CARACTER   deslocar, e ir ao estado 6
    TK_BOOL_LIT   deslocar, e ir ao estado 8
    '!'           deslocar, e ir ao estado 11
    '('           deslocar, e ir ao estado 12

    T  ir ao estado 43
    F  ir ao estado 18


Estado 31

   14 E: E '+' • T

    TK_NUM        deslocar, e ir ao estado 1
    TK_ID         deslocar, e ir ao estado 24
    TK_NUM_FLOAT  deslocar, e ir ao estado 4
    TK_CARACTER   deslocar, e ir ao estado 6
    TK_BOOL_LIT   deslocar, e ir ao estado 8
    '!'           deslocar, e ir ao estado 11
    '('           deslocar, e ir ao estado 12

    T  ir ao estado 44
    F  ir ao estado 18


Estado 32

   10 E: E '-' • T

    TK_NUM        deslocar, e ir ao estado 1
    TK_ID         deslocar, e ir ao estado 24
    TK_NUM_FLOAT  deslocar, e ir ao estado 4
    TK_CARACTER   deslocar, e ir ao estado 6
    TK_BOOL_LIT   deslocar, e ir ao estado 8
    '!'           deslocar, e ir ao estado 11
    '('           deslocar, e ir ao estado 12

    T  ir ao estado 45
    F  ir ao estado 18


Estado 33

   11 E: E '<' • T

    TK_NUM        deslocar, e ir ao estado 1
    TK_ID         deslocar, e ir ao estado 24
    TK_NUM_FLOAT  deslocar, e ir ao estado 4
    TK_CARACTER   deslocar, e ir ao estado 6
    TK_BOOL_LIT   deslocar, e ir ao estado 8
    '!'           deslocar, e ir ao estado 11
    '('           deslocar, e ir ao estado 12

    T  ir ao estado 46
    F  ir ao estado 18


Estado 34

   13 E: E '>' • T

    TK_NUM        deslocar, e ir ao estado 1
    TK_ID         deslocar, e ir ao estado 24
    TK_NUM_FLOAT  deslocar, e ir ao estado 4
    TK_CARACTER   deslocar, e ir ao estado 6
    TK_BOOL_LIT   deslocar, e ir ao estado 8
    '!'           deslocar, e ir ao estado 11
    '('           deslocar, e ir ao estado 12

    T  ir ao estado 47
    F  ir ao estado 18


Estado 35

   17 T: T '*' • F

    TK_NUM        deslocar, e ir ao estado 1
    TK_ID         deslocar, e ir ao estado 24
    TK_NUM_FLOAT  deslocar, e ir ao estado 4
    TK_CARACTER   deslocar, e ir ao estado 6
    TK_BOOL_LIT   deslocar, e ir ao estado 8
    '('           deslocar, e ir ao estado 12

    F  ir ao estado 48


Estado 36

   18 T: T '/' • F

    TK_NUM        deslocar, e ir ao estado 1
    TK_ID         deslocar, e ir ao estado 24
    TK_NUM_FLOAT  deslocar, e ir ao estado 4
    TK_CARACTER   deslocar, e ir ao estado 6
    TK_BOOL_LIT   deslocar, e ir ao estado 8
    '('           deslocar, e ir ao estado 12

    F  ir ao estado 49


Estado 37

    4 COMANDO: TK_ID '=' E • ';'
   10 E: E • '-' T
   11  | E • '<' T
   12  | E • TK_AND T
   13  | E • '>' T
   14  | E • '+' T

    TK_AND  deslocar, e ir ao estado 30
    '+'     deslocar, e ir ao estado 31
    '-'     deslocar, e ir ao estado 32
    ';'     deslocar, e ir ao estado 50
    '<'     deslocar, e ir ao estado 33
    '>'     deslocar, e ir ao estado 34


Estado 38

    5 COMANDO: TK_INT TK_ID ';' •

    $padrão  reduzir usando a regra 5 (COMANDO)


Estado 39

    8 COMANDO: TK_CHAR TK_ID ';' •

    $padrão  reduzir usando a regra 8 (COMANDO)


Estado 40

    6 COMANDO: TK_BOOL TK_ID ';' •

    $padrão  reduzir usando a regra 6 (COMANDO)


Estado 41

    7 COMANDO: TK_FLOAT TK_ID ';' •

    $padrão  reduzir usando a regra 7 (COMANDO)


Estado 42

   26 F: '(' E ')' •

    $padrão  reduzir usando a regra 26 (F)


Estado 43

   12 E: E TK_AND T •
   17 T: T • '*' F
   18  | T • '/' F

    '*'  deslocar, e ir ao estado 35
    '/'  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 12 (E)


Estado 44

   14 E: E '+' T •
   17 T: T • '*' F
   18  | T • '/' F

    '*'  deslocar, e ir ao estado 35
    '/'  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 14 (E)


Estado 45

   10 E: E '-' T •
   17 T: T • '*' F
   18  | T • '/' F

    '*'  deslocar, e ir ao estado 35
    '/'  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 10 (E)


Estado 46

   11 E: E '<' T •
   17 T: T • '*' F
   18  | T • '/' F

    '*'  deslocar, e ir ao estado 35
    '/'  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 11 (E)


Estado 47

   13 E: E '>' T •
   17 T: T • '*' F
   18  | T • '/' F

    '*'  deslocar, e ir ao estado 35
    '/'  deslocar, e ir ao estado 36

    $padrão  reduzir usando a regra 13 (E)


Estado 48

   17 T: T '*' F •

    $padrão  reduzir usando a regra 17 (T)


Estado 49

   18 T: T '/' F •

    $padrão  reduzir usando a regra 18 (T)


Estado 50

    4 COMANDO: TK_ID '=' E ';' •

    $padrão  reduzir usando a regra 4 (COMANDO)
